@@ -285,6 +285,16 @@ inst-names =   "('Port 1 Ethernet', 'Port 2 Ethernet',
               tag.
             </p>
           </dd>
+          <dt><tt>hide</tt></dt>
+          <dd>Default value: <i>not set</i>
+            <p>
+              When a target sets this tag to <tt>true</tt>, the grapher
+              will not list this target in the hierarchical tree view. You
+              might do this when creating multiple-target graphs via
+              <tt>targets</tt> or <tt>mtargets</tt> tags, to suppress the
+              standalone components to show only the summarized graph.
+            </p>
+          </dd>
           <dt><tt>inst</tt></dt>
           <dd>Default value: <i>none</i>
             <p>
